--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,56 @@
+# OS files
 .DS_Store
+Thumbs.db
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# Project specific
+gutenberg_cache/
+output/
+*.pdf
+*.svg
+*.png
+
+# Jupyter
+.ipynb_checkpoints/
+
+# Debug files
+debug_*.py
